--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,6 @@
 requires = ["setuptools", "wheel"]
 
 [project]
-name = "ai_dj_remixer"
+name = "mix-ai-engine"
 version = "0.1.0"
 dependencies = []
