--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools", "wheel"]
 [project]
 name = "mix_ai_engine"
 version = "0.1.0"
-dependencies = ['pydub', 'librosa', 'numpy', 'soundfile']
+dependencies = ['pydub', 'librosa', 'numpy', 'soundfile', 'pyrubberband']
 authors = [
   { name = "Lance Hartman", email = "lancehar@seas.upenn.edu" },
   { name = "Luka Koll", email = "lkoll@seas.upenn.edu" },
